# ROBO_PROJECT

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: manipulation_gazebo_controllers.yaml  maze_params.yaml
gazebo/: turtlebot3_waffle_pi_maze.gazebo.xacro
launch/: manipulation_maze_bringup.launch.py  maze.launch.py  maze_launch.py
rviz/: maze_view.rviz
scripts/: gen_maze_world.py
turtlebot3_maze/: arm_controller.py  arm_controller_backup.py  generate_maze.py  grid_mapper.py  lidar_processor.py  manipulator_controller.py  maze_grid.py  maze_navigator.py  mission_manager.py  navigator.py  object_detector.py  path_planner.py  standalone_navigator.py
urdf/: turtlebot3_manipulation.urdf.xacro
worlds/: maze.world  maze_world.world
