<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_maze</name>
  <version>0.0.1</version>
  <description>TurtleBot3 Maze World</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
